# talentmatchapi

./: .env.example  .flake8  .gitignore  AGENTIC_QUICK_REFERENCE.sh  AGENTIC_ROUTES_SUMMARY.md  AGENTIC_SYSTEM_ARCHITECTURE.md  AGENTIC_SYSTEM_COMPLETE.md  AGENTIC_SYSTEM_IMPLEMENTATION_SUMMARY.md  AGENTIC_SYSTEM_INTEGRATION_GUIDE.md  AGENTIC_SYSTEM_TESTING.md  AI_STACK_AND_AGENTIC_IMPROVEMENTS.md  CODE_COMPLETENESS_ASSESSMENT.md  COMPLETION_STATUS.md  E2E_TESTING_GUIDE.md  IMPLEMENTATION_PROGRESS.md  MARKETING.md  MIGRATION_COMPLETE.md  OLLAMA_SETUP.md  PROJECT_COMPLETION_REPORT.md  QUERY_AUGMENTATION_EXPLANATION.md  QUERY_AUGMENTATION_FIX.md  QUICKSTART.md  QUICK_START.md  README.md  RECRUITMENT_EXTRACTION_FIX.md  SETUP_COMPLETE.md  SOLUTION_SUMMARY.py  START_HERE.md  TECH_STACK_QUICK_REFERENCE.md  TECH_STACK_SETUP.md  TESTING_GUIDE.md  USER_MANUAL_AND_API_GUIDE.md  WEBSITE_SNIPPET.md  check_prerequisites.sh  debug_db.py  diagnose_chromadb.py  docker-compose.yml  e2e_test.sh  examples_agentic_usage.py  main.py  (+15 more)
docker/: Dockerfile  Dockerfile.worker
seed_data/: tech_stacks.json
src/ai/: __init__.py  agent_orchestrator.py  agent_tools.py  agents.py  embeddings_service.py  evaluation_service.py  evaluation_service_complete.py  finetuning_service.py  llm_service.py  memory_service.py  query_router.py  rag_service.py  recruiter_agent.py  recruitment_ai_service.py  reflection_service.py
src/api/: agentic_recruitment_routes.py  agentic_routes.py  auth_routes.py  branewise.html  document_routes.py  engagement_routes.py  hiring_routes.py  (+8 more)
uploads/: test_doc_1774763982.txt
(+23 files in other folders)
